tests-integration/tests/roundtrip/invalid/semantic/undeclared_idenfitier/02/input.essence
find y: int(1..4)
such that x = 5